--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <br />
     <Footer>
         <hr />
-        Jospeh Mtonga (C) 2025. All Rights Reserved        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp; <a href="./hobbies.html">Hobbies</a>  &nbsp;&nbsp;|&nbsp;&nbsp; <a href="./ContactMe.html">Contact Me</a> &nbsp;&nbsp;|
+        Joseph Mtonga (C) 2025. All Rights Reserved        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp; <a href="./Hobbies.html">Hobbies</a>  &nbsp;&nbsp;|&nbsp;&nbsp; <a href="./ContactMe.html">Contact Me</a> &nbsp;&nbsp;|
     </Footer>
 
 
