--- a/ContactMe.html
+++ b/ContactMe.html
@@ -17,6 +17,6 @@
 </body>
 <Footer>
     <hr />
-    Jospeh Mtonga (C) 2025. All Rights Reserved        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp; <a href="./hobbies.html">Hobbies</a>  &nbsp;&nbsp;|&nbsp;&nbsp; <a href="./index.html">Home</a> &nbsp;&nbsp;|
+    Jospeh Mtonga (C) 2025. All Rights Reserved        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp; <a href="./Hobbies.html">Hobbies</a>  &nbsp;&nbsp;|&nbsp;&nbsp; <a href="./index.html">Home</a> &nbsp;&nbsp;|
 </Footer>
 </html>
