--- a/Hobbies.html
+++ b/Hobbies.html
@@ -15,7 +15,7 @@
     </ol>
     <Footer>
         <hr />
-        Jospeh Mtonga (C) 2025. All Rights Reserved        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp; <a href="./hobbies.html">Hobbies</a>  &nbsp;&nbsp;|&nbsp;&nbsp; <a href="./index.html">Home</a> &nbsp;&nbsp;|
+        Jospeh Mtonga (C) 2025. All Rights Reserved        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp; <a href="./Hobbies.html">Hobbies</a>  &nbsp;&nbsp;|&nbsp;&nbsp; <a href="./index.html">Home</a> &nbsp;&nbsp;|
     </Footer>
 </body>
 </html>
